--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/SmartAC Built.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SmartAC Built.data.br",
-        frameworkUrl: buildUrl + "/SmartAC Built.framework.js.br",
-        codeUrl: buildUrl + "/SmartAC Built.wasm.br",
+        dataUrl: buildUrl + "/SmartAC Built.data",
+        frameworkUrl: buildUrl + "/SmartAC Built.framework.js",
+        codeUrl: buildUrl + "/SmartAC Built.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "KhairulIzzul",
         productName: "ARAircondSimulation",
