--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/bb0d9ecdb05db3e84da20bd14a4f84dc.loader.js";
       var config = {
-        dataUrl: buildUrl + "/d4053166065b6c8f361caca8a8770486.data.br",
-        frameworkUrl: buildUrl + "/404ce7fdf4f29db05a1ef884a7f2667d.framework.js.br",
-        codeUrl: buildUrl + "/4647757617ffef9cac823f9bd7c20042.wasm.br",
+        dataUrl: buildUrl + "/50d209e88583d40e416f77073e766037.data",
+        frameworkUrl: buildUrl + "/404ce7fdf4f29db05a1ef884a7f2667d.framework.js",
+        codeUrl: buildUrl + "/4647757617ffef9cac823f9bd7c20042.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "KhairulIzzul",
         productName: "ARAircondSimulation",
