--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | ARAircondSimulation</title>
     <meta name="description" content="">
@@ -11,7 +10,7 @@
   </head>
   <body>
     <div id="unity-container">
-      <div id="unity-canvas-container" style="width: 100%; height: 100%;">
+      <div id="unity-canvas-container">
         <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
       </div>
       <div id="unity-loading-bar">
@@ -32,7 +31,7 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/bb0d9ecdb05db3e84da20bd14a4f84dc.loader.js";
       var config = {
-        dataUrl: buildUrl + "/f14174ca76a1db7fdc44b30ff6214f06.data",
+        dataUrl: buildUrl + "/f0bd8b1facf51014cbe54dfd19e26f36.data",
         frameworkUrl: buildUrl + "/e4252283d5517eecd3c06f5699d8f8f9.framework.js",
         codeUrl: buildUrl + "/d58a011aa9f76cf02b4066099ef5baa3.wasm",
         streamingAssetsUrl: "StreamingAssets",
@@ -50,6 +49,8 @@
       var unityInstance = null;
       
 
+      canvasContainer.style.width = "960px";
+      canvasContainer.style.height = "600px";
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
