--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
         </div>
       </div>
       <div id="unity-footer">
+        <!-- <div id="unity-webgl-logo"></div> -->
+        <!-- <button id="entervr" value="Enter VR" disabled>VR</button> -->
+        <!-- <button id="enterar" value="Enter AR" disabled>AR</button> -->
+        <!-- <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div> -->
+        <div id="unity-build-title">ARAircondSimulation</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/bb0d9ecdb05db3e84da20bd14a4f84dc.loader.js";
       var config = {
-        dataUrl: buildUrl + "/3aece26424c03e1bec209daaa07e0a81.data",
+        dataUrl: buildUrl + "/ce0bfc31ed0721e158e30e789e9427c6.data",
         frameworkUrl: buildUrl + "/e4252283d5517eecd3c06f5699d8f8f9.framework.js",
         codeUrl: buildUrl + "/d58a011aa9f76cf02b4066099ef5baa3.wasm",
         streamingAssetsUrl: "StreamingAssets",
