--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </div>
       </div>
       <div id="unity-footer">
-        <!-- <div id="unity-webgl-logo"></div> -->
-        <!-- <button id="entervr" value="Enter VR" disabled>VR</button> -->
-        <!-- <button id="enterar" value="Enter AR" disabled>AR</button> -->
-        <!-- <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div> -->
+        <div id="unity-webgl-logo"></div>
+        <button id="entervr" value="Enter VR" disabled>VR</button>
+        <button id="enterar" value="Enter AR" disabled>AR</button>
+        <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
         <div id="unity-build-title">ARAircondSimulation</div>
       </div>
     </div>
@@ -32,9 +32,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/bb0d9ecdb05db3e84da20bd14a4f84dc.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ce0bfc31ed0721e158e30e789e9427c6.data",
-        frameworkUrl: buildUrl + "/e4252283d5517eecd3c06f5699d8f8f9.framework.js",
-        codeUrl: buildUrl + "/d58a011aa9f76cf02b4066099ef5baa3.wasm",
+        dataUrl: buildUrl + "/e1da06e9d3c8f89d152809810d493946.data",
+        frameworkUrl: buildUrl + "/fdef1e3b7c77014ef9981ecfec3cb148.framework.js",
+        codeUrl: buildUrl + "/3685342d2f137f4ae99d583a6b87c675.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "KhairulIzzul",
         productName: "ARAircondSimulation",
