--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         </div>
       </div>
       <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <button id="entervr" value="Enter VR" disabled>VR</button>
-        <button id="enterar" value="Enter AR" disabled>AR</button>
+        <!-- <div id="unity-webgl-logo"></div> -->
+        <!-- <button id="entervr" value="Enter VR" disabled>VR</button> -->
+        <!-- <button id="enterar" value="Enter AR" disabled>AR</button> -->
         <!-- <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div> -->
-        <div id="unity-build-title">ARAircondSimulation</div>
+        <!-- <div id="unity-build-title">ARAircondSimulation</div> -->
       </div>
     </div>
     <script>
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/bb0d9ecdb05db3e84da20bd14a4f84dc.loader.js";
       var config = {
-        dataUrl: buildUrl + "/e1da06e9d3c8f89d152809810d493946.data",
+        dataUrl: buildUrl + "/4697456bb669ad18b87128e584b79e11.data",
         frameworkUrl: buildUrl + "/fdef1e3b7c77014ef9981ecfec3cb148.framework.js",
         codeUrl: buildUrl + "/3685342d2f137f4ae99d583a6b87c675.wasm",
         streamingAssetsUrl: "StreamingAssets",
