--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         </div>
       </div>
       <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
+        <!-- <div id="unity-webgl-logo"></div>
         <button id="entervr" value="Enter VR" disabled>VR</button>
         <button id="enterar" value="Enter AR" disabled>AR</button>
         <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
-        <div id="unity-build-title">ARAircondSimulation</div>
+        <div id="unity-build-title">ARAircondSimulation</div> -->
       </div>
     </div>
     <script>
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/bb0d9ecdb05db3e84da20bd14a4f84dc.loader.js";
       var config = {
-        dataUrl: buildUrl + "/30175c8b11da64a018d7b104b789c601.data",
+        dataUrl: buildUrl + "/65ccbb6e3b5f5e13769ba04c88259d96.data",
         frameworkUrl: buildUrl + "/fa9fe826b0eba626e53b27e7e562a114.framework.js",
         codeUrl: buildUrl + "/b96fe2734cf23d3242c1a955166add7b.wasm",
         streamingAssetsUrl: "StreamingAssets",
