--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
       </div>
       <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
+        <!-- <div id="unity-logo"></div> -->
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
@@ -32,9 +32,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/bb0d9ecdb05db3e84da20bd14a4f84dc.loader.js";
       var config = {
-        dataUrl: buildUrl + "/65ccbb6e3b5f5e13769ba04c88259d96.data",
-        frameworkUrl: buildUrl + "/fa9fe826b0eba626e53b27e7e562a114.framework.js",
-        codeUrl: buildUrl + "/b96fe2734cf23d3242c1a955166add7b.wasm",
+        dataUrl: buildUrl + "/2f8935b036d0b601723038e3736e39c8.data",
+        frameworkUrl: buildUrl + "/cc591307a940f18188f27955bdeb6e2b.framework.js",
+        codeUrl: buildUrl + "/c712959dd5515902e5cedae9d9f35d89.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "KhairulIzzul",
         productName: "ARAircondSimulation",
