--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
         <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
       </div>
       <div id="unity-loading-bar">
-        <!-- <div id="unity-logo"></div> -->
+        <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
       <div id="unity-footer">
-        <!-- <div id="unity-webgl-logo"></div>
+        <div id="unity-webgl-logo"></div>
         <button id="entervr" value="Enter VR" disabled>VR</button>
         <button id="enterar" value="Enter AR" disabled>AR</button>
         <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
-        <div id="unity-build-title">ARAircondSimulation</div> -->
+        <div id="unity-build-title">ARAircondSimulation</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/bb0d9ecdb05db3e84da20bd14a4f84dc.loader.js";
       var config = {
-        dataUrl: buildUrl + "/2f8935b036d0b601723038e3736e39c8.data",
-        frameworkUrl: buildUrl + "/cc591307a940f18188f27955bdeb6e2b.framework.js",
-        codeUrl: buildUrl + "/c712959dd5515902e5cedae9d9f35d89.wasm",
+        dataUrl: buildUrl + "/97d85a6bdb916eaff6e835d71b6ec6bc.data",
+        frameworkUrl: buildUrl + "/e86e59f92005c66676f699375a29da40.framework.js",
+        codeUrl: buildUrl + "/b1e314678797b4d59925f8af905acdba.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "KhairulIzzul",
         productName: "ARAircondSimulation",
@@ -72,15 +72,8 @@
       };
       document.body.appendChild(script);
 
-      let vrBtn = document.getElementById("entervr");
-      if (vrBtn) {
-        vrBtn.disabled = true;
-      }
-
-      let arBtn = document.getElementById("enterar");
-      if (arBtn) {
-        arBtn.disabled = true;
-      }
+      let enterARButton = document.getElementById('enterar');
+      let enterVRButton = document.getElementById('entervr');
 
       document.addEventListener('onARSupportedCheck', function (event) {
         enterARButton.disabled = !event.detail.supported;
